--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
-asn1crypto
-censys
-click
-ocspbuilder
-oscrypto
-requests
-flask
-flask-bootstrap
-flask-admin
-sqlalchemy
+asn1crypto==0.22.0
+censys==0.0.7
+certifi==2017.7.27.1
+cffi==1.10.0
+chardet==3.0.4
+click==6.7
+dominate==2.3.1
+Flask==0.12.2
+Flask-Admin==1.5.0
+Flask-Bootstrap==3.3.7.1
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+netaddr==0.7.19
+ocspbuilder==0.10.2
+oscrypto==0.18.0
+pycparser==2.18
+PyNaCl==1.1.2
+requests==2.18.4
+six==1.10.0
+SQLAlchemy==1.1.13
+urllib3==1.22
+visitor==0.1.3
+Werkzeug==0.12.2
+WTForms==2.1
