Update how constants are stored

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -22,3 +22,7 @@ values = [0-9A-Za-z-]+
 [bumpversion:file:src/ocspdash/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
+
+[bumpversion:file:src/ocspdash/constants.py]
+search = VERSION = '{current_version}'
+replace = VERSION = '{new_version}'
