Add docs and readme build

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 [tox]
 # add additional Python versions here
 #envlist = coverage-clean, py36, manifest, docs, coverage-report
-envlist = manifest
+envlist = manifest, docs, readme
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
@@ -46,3 +46,10 @@ skip_install = true
 commands =
     coverage combine
     coverage report
+
+[testenv:readme]
+deps =
+    restructuredtext-lint
+    pygments
+skip_install = true
+commands = rst-lint README.rst
