Add coveragerc and setup tox envs to run all the tests now.

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,7 @@
 
 [tox]
 # add additional Python versions here
-#envlist = coverage-clean, py36, manifest, docs, coverage-report
-envlist = manifest, docs, readme
+envlist = coverage-clean, py36, manifest, docs, readme, coverage-report
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
