--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,13 @@
 graft src
+graft docs
+graft tests
+
+prune docs/build
 
 include .bumpversion.cfg
+include .coveragerc
+include Dockerfile
+include docker-compose.yml
 include tox.ini
 include requirements.txt
 
