Split travis tests so we can see failures of each part individually.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ language: python
 
 python:
     - 3.6
+env:
+    - TOXENV=manifest
+    - TOXENV=docs
+    - TOXENV=readme
 
 install:
     - pip install tox
