Actually include main Python tests in Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ env:
     - TOXENV=docs
     - TOXENV=readme
 
+matrix:
+    include:
+        - python: "3.6"
+          env: TOXENV=py36
+
 install:
     - pip install tox
 
