Add docker ignore

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,7 @@ include .bumpversion.cfg
 include .coveragerc
 include Dockerfile
 include docker-compose.yml
+include .dockerignore
 include tox.ini
 include requirements.txt
 
