--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 # add additional Python versions here
-envlist = coverage-clean, py36, manifest, docs, readme, coverage-report
+envlist = coverage-clean, py36, manifest, docs, readme, coverage-report, rst-lint
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
@@ -52,3 +52,10 @@ skip_install = true
 commands =
     coverage combine
     coverage report
+
+[testenv:rst-lint]
+commands = rst-lint README.rst
+skip_install = true
+deps =
+    restructuredtext_lint
+    pygments
