Update setup and testing configuration

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 # add additional Python versions here
-envlist = coverage-clean, py36, manifest, docs, readme, coverage-report, rst-lint
+envlist = coverage-clean, py36, manifest, docs, readme, coverage-report, rst-lint, flake8
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
@@ -59,3 +59,34 @@ skip_install = true
 deps =
     restructuredtext_lint
     pygments
+
+[testenv:flake8]
+basepython = python3
+skip_install = true
+deps =
+    flake8
+    flake8-docstrings>=0.2.7
+    flake8-import-order>=0.9
+    pep8-naming
+    flake8-colors
+commands =
+    flake8 src/ocspdash tests/ setup.py
+
+[flake8]
+ignore = E501
+exclude =
+    .tox,
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    build,
+    dist,
+    tests/fixtures/*,
+    *.pyc,
+    *.egg-info,
+    .cache,
+    .eggs
+max-complexity = 10
+import-order-style = google
+application-import-names = flake8
+format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
