--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,19 @@ language: python
 
 python:
     - 3.6
-env:
-    - TOXENV=manifest
-    - TOXENV=docs
-    - TOXENV=readme
-	- TOXENV=rst-lint
 
 matrix:
-    include:
-        - python: 3.6
-          env: TOXENV=py
-
-before_install:
-    - pip install codecov
+  include:
+    - env: TOXENV=py
+    - env: TOXENV=docs
+    - env: TOXENV=manifest
+    - env: TOXENV=rst-lint
+    - env: TOXENV=flake8
+  allow_failures:
+    - env: TOXENV=flake8
 
 install:
-    - pip install tox
+    - pip install tox codecov coverage
 
 script:
     - tox
