Update requirements in requirements.txt and setup.py; add pipenv/pipfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,40 @@
-asn1crypto==0.22.0
-censys==0.0.7
-certifi==2017.7.27.1
-cffi==1.10.0
+-i https://pypi.org/simple
+argon2-cffi==18.1.0
+asn1crypto==0.24.0
+censys==0.0.8
+certifi==2018.4.16
+cffi==1.11.5; platform_python_implementation != 'pypy'
 chardet==3.0.4
 click==6.7
+cryptography==2.2.2
+docopt==0.6.2
 dominate==2.3.1
-Flask==0.12.2
-Flask-Admin==1.5.0
-Flask-Bootstrap==3.3.7.1
+ecdsa==0.13
+flasgger==0.8.3
+flask-admin==1.5.1
+flask-bootstrap==3.3.7.1
+flask-sqlalchemy==2.3.2
+flask==1.0.2
+future==0.16.0
 idna==2.6
 itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
+jinja2==2.10
+jsonschema==2.6.0
+markupsafe==1.0
+mistune==0.8.3
 netaddr==0.7.19
 ocspbuilder==0.10.2
-oscrypto==0.18.0
+oscrypto==0.19.1
+pyasn1==0.4.2
 pycparser==2.18
-PyNaCl==1.1.2
+python-jose==3.0.0
+pyyaml==3.12
 requests==2.18.4
-six==1.10.0
-SQLAlchemy==1.1.13
+rsa==3.4.2
+six==1.11.0
+sqlalchemy==1.2.7
+tqdm==4.23.3
 urllib3==1.22
 visitor==0.1.3
-Werkzeug==0.12.2
-WTForms==2.1
-flasgger==0.6.6
-flask-sqlalchemy
-cryptography
-python-jose
-tqdm
-docopt
+werkzeug==0.14.1
+wtforms==2.1
