--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ python-jose = "*"
 requests = "*"
 sqlalchemy = "*"
 tqdm = "*"
+"e1839a8" = {path = ".", editable = true}
 
 [dev-packages]
 tox = "*"
