--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,8 @@ include .coveragerc
 include Dockerfile
 include docker-compose.yml
 include .dockerignore
+include Pipfile
+include Pipfile.lock
 include tox.ini
 include requirements.txt
 
