--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,9 @@ ENV/
 # Rope project settings
 .ropeproject
 
+# PyTest caches
+.pytest_cache
+
 
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
