--- a/tox.ini
+++ b/tox.ini
@@ -65,10 +65,10 @@ basepython = python3
 skip_install = true
 deps =
     flake8
-    flake8-docstrings>=0.2.7
-    flake8-import-order>=0.9
-    pep8-naming
     flake8-colors
+    flake8-docstrings
+    flake8-import-order
+    pep8-naming
 commands =
     flake8 src/ocspdash tests/ setup.py
 
