--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ requests = "*"
 sqlalchemy = "*"
 tqdm = "*"
 "e1839a8" = {path = ".", editable = true}
+passlib = "*"
 
 [dev-packages]
 tox = "*"
