--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -i https://pypi.org/simple
+-e .
 argon2-cffi==18.1.0
 asn1crypto==0.24.0
 censys==0.0.8
@@ -25,7 +26,8 @@ mistune==0.8.3
 netaddr==0.7.19
 ocspbuilder==0.10.2
 oscrypto==0.19.1
-pyasn1==0.4.2
+passlib==1.7.1
+pyasn1==0.4.3
 pycparser==2.18
 python-jose==3.0.0
 pyyaml==3.12
@@ -33,7 +35,7 @@ requests==2.18.4
 rsa==3.4.2
 six==1.11.0
 sqlalchemy==1.2.7
-tqdm==4.23.3
+tqdm==4.23.4
 urllib3==1.22
 visitor==0.1.3
 werkzeug==0.14.1
