--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ argon2-cffi==18.1.0
 asn1crypto==0.24.0
 censys==0.0.8
 certifi==2018.4.16
-cffi==1.11.5; platform_python_implementation != 'pypy'
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
 cryptography==2.2.2
@@ -20,6 +20,7 @@ future==0.16.0
 idna==2.6
 itsdangerous==0.24
 jinja2==2.10
+jsonlines==1.2.0
 jsonschema==2.6.0
 markupsafe==1.0
 mistune==0.8.3
