--- a/tox.ini
+++ b/tox.ini
@@ -73,7 +73,7 @@ commands =
     flake8 src/ocspdash tests/ setup.py
 
 [flake8]
-ignore = E501
+application-import-names = ocspdash
 exclude =
     .tox,
     .git,
@@ -86,7 +86,7 @@ exclude =
     *.egg-info,
     .cache,
     .eggs
-max-complexity = 10
-import-order-style = google
-application-import-names = flake8
 format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
+import-order-style = pycharm
+ignore = D105,E501
+max-complexity = 10
