Add doc8 to travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
     - env: TOXENV=manifest
     - env: TOXENV=rst-lint
     - env: TOXENV=flake8
+    - env: TOXENV=doc8
 
 install:
     - pip install tox codecov coverage
