--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 # add additional Python versions here
-envlist = coverage-clean, py36, manifest, docs, readme, coverage-report, rst-lint, flake8
+envlist = coverage-clean, py36, manifest, docs, readme, coverage-report, rst-lint, flake8, doc8
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
@@ -90,3 +90,12 @@ format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(co
 import-order-style = pycharm
 ignore = D105,E501
 max-complexity = 10
+
+[testenv:doc8]
+basepython = python3
+skip_install = true
+deps =
+    sphinx
+    doc8
+commands =
+    doc8 docs/source/
