Update travis to use postgres during testing
- add postgres to services
- add environment variable for OCSPDASH_TEST_CONNECTION and allow
passthrough to tox
- add checks for database and creation if not exists
- set test connector as environment variable to pass through to make
sure psycopg2 gets installed with tox

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,9 @@ envlist = coverage-clean, py36, manifest, docs, readme, coverage-report, rst-lin
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
+passenv = OCSPDASH_TEST_CONNECTOR OCSPDASH_TEST_CONNECTION TRAVIS CI CI_*
 deps =
+    {env:OCSPDASH_TEST_CONNECTOR:}
     coverage
     pytest
 whitelist_externals =
