--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,27 @@ language: python
 python:
     - 3.6
 
+services:
+  - postgres
+
 matrix:
   include:
-    - env: TOXENV=py
+    - env: TOXENV=py DB=postgres OCSPDASH_TEST_CONNECTOR=psycopg2 OCSPDASH_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
     - env: TOXENV=docs
     - env: TOXENV=manifest
     - env: TOXENV=rst-lint
     - env: TOXENV=flake8
     - env: TOXENV=doc8
 
+
 install:
     - pip install tox codecov coverage
+
+before_script:
+  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'DROP DATABASE IF EXISTS tests;' -U postgres; fi"
+  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'DROP DATABASE IF EXISTS tests_tmp;' -U postgres; fi"
+  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'CREATE DATABASE tests;' -U postgres; fi"
+  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'CREATE DATABASE tests_tmp;' -U postgres; fi"
 
 script:
     - tox
