Respecify config in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,7 @@ services:
     depends_on:
      - db
     environment:
-      OCSPDASH_CONFIG: ocspdash.web.config.DockerPostgresConfig
-      OCSPDASH_DB_USER: postgres
-      OCSPDASH_DB_PASSWORD: postgres
-      OCSPDASH_DB_HOST: db
-      OCSPDASH_DB_DATABASE: postgres
+      OCSPDASH_CONNECTION: postgresql://postgres:postgres@db:5432/postgres
       OCSPDASH_SECRET_KEY: ${SECRET_KEY}
       CENSYS_API_ID: ${CENSYS_API_ID}
       CENSYS_API_SECRET: ${CENSYS_API_SECRET}
