Add mypy to testing
- add tox environment
- add allowed failure on travis
- add gitignore for mypy cache
- add to development section of pipfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ matrix:
     - env: TOXENV=rst-lint
     - env: TOXENV=flake8
     - env: TOXENV=doc8
+    - env: TOXENV=mypy
+  allow_failures:
+    - env: TOXENV=mypy
 
 
 install:
