--- a/tox.ini
+++ b/tox.ini
@@ -101,3 +101,9 @@ deps =
     doc8
 commands =
     doc8 docs/source/
+
+[testenv:mypy]
+commands = mypy
+skip_install = true
+deps =
+    mypy src/ocspdash/ --ignore-missing-import
