Update code to pass mypy

--- a/tox.ini
+++ b/tox.ini
@@ -106,4 +106,4 @@ commands =
 commands = mypy
 skip_install = true
 deps =
-    mypy src/ocspdash/ --ignore-missing-import
+    mypy src/ocspdash/ --ignore-missing-import --no-warn-no-return
