Fix call to mypy

--- a/tox.ini
+++ b/tox.ini
@@ -103,7 +103,7 @@ commands =
     doc8 docs/source/
 
 [testenv:mypy]
-commands = mypy
+commands = mypy src/ocspdash/ --ignore-missing-import --no-warn-no-return
 skip_install = true
 deps =
-    mypy src/ocspdash/ --ignore-missing-import --no-warn-no-return
+    mypy
