--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,55 @@
 [bdist_wheel]
 # I use f-strings. Upgrade yo' Python!
+# TODO change this appropriately for 3.7
 python-tag = py36
+
+
+#############################
+# Bumpversion Configuration #
+# (.bumpversion)            #
+#############################
+[bumpversion]
+current_version = 0.1.0-dev
+commit = True
+tag = False
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:-(?P<release>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+(?P<build>[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?
+serialize =
+	{major}.{minor}.{patch}-{release}+{build}
+	{major}.{minor}.{patch}+{build}
+	{major}.{minor}.{patch}-{release}
+	{major}.{minor}.{patch}
+
+[bumpversion:part:release]
+optional_value = production
+first_value = dev
+values =
+	dev
+	production
+
+[bumpverion:part:build]
+values = [0-9A-Za-z-]+
+
+[bumpversion:file:src/ocspdash/__init__.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
+
+[bumpversion:file:src/ocspdash/constants.py]
+search = VERSION = '{current_version}'
+replace = VERSION = '{new_version}'
+
+
+##########################
+# Coverage Configuration #
+# (.coveragerc)          #
+##########################
+[coverage:run]
+branch = True
+source = ocspdash
+
+[coverage:paths]
+source =
+    src/ocspdash
+    .tox/*/lib/python*/site-packages/ocspdash
+
+[coverage:report]
+show_missing = True
