--- a/Pipfile
+++ b/Pipfile
@@ -15,19 +15,32 @@ flask = "*"
 flask-admin = "*"
 flask-bootstrap = "*"
 flask-sqlalchemy = "*"
+jsonlines = "*"
 ocspbuilder = "*"
 oscrypto = "*"
+passlib = "*"
 python-jose = "*"
 requests = "*"
 sqlalchemy = "*"
 tqdm = "*"
-passlib = "*"
-jsonlines = "*"
 "e1839a8" = {path = ".", editable = true}
 
 [dev-packages]
-tox = "*"
+check-manifest = "*"
+coverage = "*"
+"doc8" = "*"
+"flake8" = "*"
+"flake8-colors" = "*"
+"flake8-docstrings" = "*"
+"flake8-import-order" = "*"
 mypy = "*"
+"pep8-naming" = "*"
+pygments = "*"
+pytest = "*"
+restructuredtext-lint = "*"
+sphinx = "*"
+sphinx-rtd-theme = "*"
+tox = "*"
 
 [requires]
 python_version = "3.6"
