--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 -i https://pypi.org/simple
--e .
+-e file:///Users/scott/dev/ocspdash
 argon2-cffi==18.1.0
 asn1crypto==0.24.0
 censys==0.0.8
@@ -11,13 +11,13 @@ cryptography==2.2.2
 docopt==0.6.2
 dominate==2.3.1
 ecdsa==0.13
-flasgger==0.8.3
+flasgger==0.9.0
 flask-admin==1.5.1
 flask-bootstrap==3.3.7.1
 flask-sqlalchemy==2.3.2
 flask==1.0.2
 future==0.16.0
-idna==2.6
+idna==2.7
 itsdangerous==0.24
 jinja2==2.10
 jsonlines==1.2.0
@@ -32,12 +32,12 @@ pyasn1==0.4.3
 pycparser==2.18
 python-jose==3.0.0
 pyyaml==3.12
-requests==2.18.4
+requests==2.19.1
 rsa==3.4.2
 six==1.11.0
-sqlalchemy==1.2.7
+sqlalchemy==1.2.9
 tqdm==4.23.4
-urllib3==1.22
+urllib3==1.23
 visitor==0.1.3
 werkzeug==0.14.1
-wtforms==2.1
+wtforms==2.2.1
