--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,68 @@
+##########################
+# Setup.py Configuration #
+##########################
+# Configuring setup()
+[metadata]
+name = OCSPdash
+version = 0.1.0-dev
+url = https://github.com/scolby33/OCSPdash
+download_url = https://github.com/scolby33/OCSPdash/releases
+author = Scott Colby
+author_email = scolby33@gmail.com
+maintainer = scolby33@gmail.com
+maintainer_email = scolby33@gmail.com
+classifiers =
+    Development Status :: 1 - Planning
+    Intended Audience :: Developers
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python
+    Programming Language :: Python :: 3.6
+license = MIT
+description = A dashboard for the status of the top certificate authorities' OCSP responders.
+long_description = file: README.rst
+keywords =
+
+#[metadata.project_urls]
+#Documentation =
+
+[options]
+install_requires =
+    argon2-cffi
+    asn1crypto
+    censys
+    click
+    cryptography
+    distlib
+    docopt
+    flasgger
+    flask
+    flask-admin
+    flask-bootstrap
+    flask-sqlalchemy
+    jsonlines
+    ocspbuilder
+    oscrypto
+    passlib
+    python-jose
+    requests
+    sqlalchemy
+    tqdm
+python_requires = >=3.6
+tests_require =
+    tox
+packages = find:
+package_dir =
+    = src
+
+[options.entry_points]
+console_scripts =
+    ocspdash = ocspdash.cli:main
+    ocspscrape = ocspdash.ocspscrape:main
+
+[options.packages.find]
+where = src
+
+# configuring bdist_wheel
 [bdist_wheel]
 # I use f-strings. Upgrade yo' Python!
 # TODO change this appropriately for 3.7
