Replace the include line for the postgres test env.
I forgot how allow_failures works on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ services:
 
 matrix:
   include:
+    - env: TOXENV=py DB=postgres OCSPDASH_TEST_CONNECTOR=psycopg2 OCSPDASH_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
     - env: TOXENV=py DB=sqlite
     - env: TOXENV=docs
     - env: TOXENV=manifest
