Remove docopt and update pipfile.

--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"argon2-cffi" = "*"
-"asn1crypto" = "*"
+argon2-cffi = "*"
+asn1crypto = "*"
 censys = "*"
 click = "*"
 cryptography = "*"
-docopt = "*"
 flasgger = "*"
 flask = "*"
 flask-admin = "*"
@@ -23,18 +22,17 @@ python-jose = "*"
 requests = "*"
 sqlalchemy = "*"
 tqdm = "*"
-"e1839a8" = {path = ".", editable = true}
 
 [dev-packages]
 check-manifest = "*"
 coverage = "*"
-"doc8" = "*"
-"flake8" = "*"
-"flake8-colors" = "*"
-"flake8-docstrings" = "*"
-"flake8-import-order" = "*"
+doc8 = "*"
+flake8 = "*"
+flake8-colors = "*"
+flake8-docstrings = "*"
+flake8-import-order = "*"
 mypy = "*"
-"pep8-naming" = "*"
+pep8-naming = "*"
 pygments = "*"
 pytest = "*"
 restructuredtext-lint = "*"
@@ -44,3 +42,7 @@ tox = "*"
 
 [requires]
 python_version = "3.6"
+
+[packages.e1839a8]
+path = "."
+editable = true
