--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ cffi==1.11.5
 chardet==3.0.4
 click==6.7
 cryptography==2.2.2
-docopt==0.6.2
 dominate==2.3.1
 ecdsa==0.13
+enum34==1.1.6
 flasgger==0.9.0
 flask-admin==1.5.1
 flask-bootstrap==3.3.7.1
