--- a/tox.ini
+++ b/tox.ini
@@ -107,3 +107,9 @@ commands = mypy src/ocspdash/ --ignore-missing-import --no-warn-no-return
 skip_install = true
 deps =
     mypy
+
+[testenv:vulture]
+commands = vulture src/ocspdash tests/
+skip_install = true
+deps =
+    vulture
