--- a/tox.ini
+++ b/tox.ini
@@ -90,7 +90,7 @@ exclude =
     .eggs
 format = ${cyan}%(path)s${reset}:${yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s
 import-order-style = pycharm
-ignore = D105,E501
+ignore = D105,E501,W503
 max-complexity = 10
 
 [testenv:doc8]
