Update manifest since we've moved where configuration files are.
RIP me.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,11 +5,10 @@ graft tests
 prune docs/build
 prune nginx
 
-include .bumpversion.cfg
-include .coveragerc
 include Dockerfile
 include docker-compose.yml
 include .dockerignore
+include .flake8
 include Pipfile
 include Pipfile.lock
 include tox.ini
