--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 -i https://pypi.org/simple
--e file:///Users/scott/dev/ocspdash
+-e .
 argon2-cffi==18.1.0
 asn1crypto==0.24.0
 censys==0.0.8
 certifi==2018.4.16
-cffi==1.11.5
+cffi==1.11.5; platform_python_implementation != 'pypy'
 chardet==3.0.4
 click==6.7
 cryptography==2.2.2
 dominate==2.3.1
 ecdsa==0.13
-enum34==1.1.6
 flasgger==0.9.0
 flask-admin==1.5.1
 flask-bootstrap==3.3.7.1
