--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ cache: pip
 language: python
 
 python:
-    - 3.6
+  - 3.6
+
+addons:
+  - mariadb: '10.3'
 
 services:
   - postgresql
@@ -12,6 +15,7 @@ services:
 matrix:
   include:
     - env: TOXENV=py DB=postgres OCSPDASH_TEST_CONNECTOR=psycopg2 OCSPDASH_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
+    - env: TOXENV=py DB=mariadb OCSPDASH_TEST_CONNECTOR=mysqlclient OCSPDASH_TEST_CONNECTION=mysql+mysqldb://travis@localhost/tests
     - env: TOXENV=py DB=sqlite
     - env: TOXENV=docs
     - env: TOXENV=manifest
@@ -21,6 +25,7 @@ matrix:
     - env: TOXENV=mypy
     - env: TOXENV=vulture
   allow_failures:
+    - env: TOXENV=py DB=mariadb OCSPDASH_TEST_CONNECTOR=mysqlclient OCSPDASH_TEST_CONNECTION=mysql+mysqldb://travis@localhost/tests
     - env: TOXENV=vulture
 
 install:
@@ -31,6 +36,9 @@ before_script:
   - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'DROP DATABASE IF EXISTS tests_tmp;' -U postgres; fi"
   - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'CREATE DATABASE tests;' -U postgres; fi"
   - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'CREATE DATABASE tests_tmp;' -U postgres; fi"
+  - sh -c "if [ '$DB' = 'mariadb' ]; then mysql -e 'DROP DATABASE IF EXISTS tests;'; fi"
+  - sh -c "if [ '$DB' = 'mariadb' ]; then mysql -e 'CREATE DATABASE tests CHARACTER SET utf8 COLLATE utf8_general_ci;'; fi"
+  - sh -c "if [ '$DB' = 'mariadb' ]; then mysql -e \"GRANT ALL PRIVILEGES ON tests.* to 'travis'@'%' WITH GRANT OPTION;\"; fi"
 
 script:
     - tox
