Rename OCSPDASH_SECRET_KEY and OCSPDASH_DEBUG.
These belong to Flask's implicit namespace, not ours.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
      - db
     environment:
       OCSPDASH_CONNECTION: postgresql://postgres:postgres@db:5432/postgres
-      OCSPDASH_SECRET_KEY: ${SECRET_KEY}
+      SECRET_KEY: ${SECRET_KEY}
       CENSYS_API_ID: ${CENSYS_API_ID}
       CENSYS_API_SECRET: ${CENSYS_API_SECRET}
     restart: on-failure
