--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,6 @@ services:
   db:
     image: postgres:latest
     volumes:
-      - db_data:/var/lib/postgres
-
-volumes:
-  db_data:
+      - type: bind
+        source: ./db_data
+        target: /var/lib/postgres
