@cthoyt always abbreviating postgresql when he shouldn't...

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,4 +22,4 @@ services:
     volumes:
       - type: bind
         source: ./db_data
-        target: /var/lib/postgres
+        target: /var/lib/postgresql
