--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,23 @@
 
 [tox]
 # add additional Python versions here
-envlist = coverage-clean, py36, manifest, docs, readme, coverage-report, rst-lint, flake8, doc8
+envlist =
+    # always keep coverage-clean first
+    coverage-clean
+    # code linters/stylers
+    manifest
+    flake8
+    mypy
+    #vulture
+    # documentation linters/checkers
+    doc8
+    rst-lint
+    readme
+    docs
+    # the actual tests
+    py36
+    # always keep coverage-report last
+    coverage-report
 
 [testenv]
 commands = coverage run --parallel -m pytest tests {posargs}
@@ -28,6 +44,53 @@ commands = coverage erase
 deps = check-manifest
 commands = check-manifest
 
+[testenv:flake8]
+basepython = python3
+skip_install = true
+deps =
+    flake8
+    flake8-colors
+    flake8-docstrings
+    flake8-import-order
+    pep8-naming
+commands =
+    flake8 src/ocspdash tests/ setup.py
+
+[testenv:mypy]
+commands = mypy src/ocspdash/ --ignore-missing-import --no-warn-no-return
+skip_install = true
+deps =
+    mypy
+
+[testenv:vulture]
+commands = vulture src/ocspdash tests/
+skip_install = true
+deps =
+    vulture
+
+[testenv:doc8]
+basepython = python3
+skip_install = true
+deps =
+    sphinx
+    doc8
+commands =
+    doc8 docs/source/
+
+[testenv:rst-lint]
+commands = rst-lint README.rst
+skip_install = true
+deps =
+    restructuredtext_lint
+    pygments
+
+[testenv:readme]
+deps =
+    restructuredtext-lint
+    pygments
+skip_install = true
+commands = rst-lint README.rst
+
 [testenv:docs]
 changedir = docs
 deps =
@@ -41,56 +104,9 @@ commands =
     cat {envtmpdir}/build/coverage/c.txt
     cat {envtmpdir}/build/coverage/python.txt
 
-[testenv:readme]
-deps =
-    restructuredtext-lint
-    pygments
-skip_install = true
-commands = rst-lint README.rst
-
 [testenv:coverage-report]
 deps = coverage
 skip_install = true
 commands =
     coverage combine
     coverage report
-
-[testenv:rst-lint]
-commands = rst-lint README.rst
-skip_install = true
-deps =
-    restructuredtext_lint
-    pygments
-
-[testenv:flake8]
-basepython = python3
-skip_install = true
-deps =
-    flake8
-    flake8-colors
-    flake8-docstrings
-    flake8-import-order
-    pep8-naming
-commands =
-    flake8 src/ocspdash tests/ setup.py
-
-[testenv:doc8]
-basepython = python3
-skip_install = true
-deps =
-    sphinx
-    doc8
-commands =
-    doc8 docs/source/
-
-[testenv:mypy]
-commands = mypy src/ocspdash/ --ignore-missing-import --no-warn-no-return
-skip_install = true
-deps =
-    mypy
-
-[testenv:vulture]
-commands = vulture src/ocspdash tests/
-skip_install = true
-deps =
-    vulture
