--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,37 @@ sudo: true
 
 
 # 0.5 jobs, stages, and matrix
-env:
-  - TOXENV=flake8
-  - TOXENV=manifest
-  - TOXENV=mypy
-  - TOXENV=vulture
-  - TOXENV=doc8
-  - TOXENV=readme
-  - TOXENV=docs
-  - TOXENV=py DB=postgres OCSPDASH_TEST_CONNECTOR=psycopg2 OCSPDASH_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
-  - TOXENV=py DB=sqlite
+jobs:
+  include:
+    # lint stage
+    - stage: lint
+      env: TOXENV=flake8
+    - env: TOXENV=manifest
+    - env: TOXENV=mypy
+    - env: TOXENV=vulture
+
+    # docs stage
+    - stage: docs
+      env: TOXENV=doc8
+    - env: TOXENV=readme
+    - env: TOXENV=docs
+
+    # test stage
+    - stage: test
+      env: TOXENV=py DB=postgres OCSPDASH_TEST_CONNECTOR=psycopg2 OCSPDASH_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
+      services: postgresql
+    - env: TOXENV=py DB=sqlite
+
+    - env: TOXENV=py DB=postgres OCSPDASH_TEST_CONNECTOR=psycopg2 OCSPDASH_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
+      services: postgresql
+      python: 3.6
+      dist: trusty
+      sudo: false
+    - env: TOXENV=py DB=sqlite
+      services: postgresql
+      python: 3.6
+      dist: trusty
+      sudo: false
 
 matrix:
   allow_failures:
