--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,7 @@ include Dockerfile
 include docker-compose.yml
 include .dockerignore
 include .flake8
+include doc8.ini
 include Pipfile
 include Pipfile.lock
 include tox.ini
