Add sphinx-autodoc-typehints extension to tox

--- a/tox.ini
+++ b/tox.ini
@@ -96,6 +96,7 @@ commands = rst-lint README.rst
 changedir = docs
 deps =
     sphinx
+    sphinx-autodoc-typehints
     sphinx_rtd_theme
 commands =
     mkdir -p {envtmpdir}
