Add checking of README to doc8 in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -76,7 +76,7 @@ deps =
     sphinx
     doc8
 commands =
-    doc8 docs/source/
+    doc8 docs/source/ README.rst
 
 [testenv:rst-lint]
 commands = rst-lint README.rst
