--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ argon2-cffi==18.1.0
 asn1crypto==0.24.0
 censys==0.0.8
 certifi==2018.4.16
-cffi==1.11.5; platform_python_implementation != 'pypy'
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
-cryptography==2.2.2
+cryptography==2.3
 dominate==2.3.1
 ecdsa==0.13
+enum34==1.1.6
 flasgger==0.9.0
 flask-admin==1.5.1
 flask-bootstrap==3.3.7.1
@@ -27,7 +28,7 @@ netaddr==0.7.19
 ocspbuilder==0.10.2
 oscrypto==0.19.1
 passlib==1.7.1
-pyasn1==0.4.3
+pyasn1==0.4.4
 pycparser==2.18
 python-jose==3.0.0
 pyyaml==3.13
@@ -35,8 +36,8 @@ requests==2.19.1
 rsa==3.4.2
 six==1.11.0
 sqlalchemy==1.2.10
-tqdm==4.23.4
-urllib3==1.23
+tqdm==4.24.0
+urllib3==1.23; python_version != '3.1.*'
 visitor==0.1.3
 werkzeug==0.14.1
 wtforms==2.2.1
