Reorganize tox.ini and add a bunch more linters/checking.
Reorganize .flake8 by plugin

Add "strict" mypy.ini

Add keywords and zip_safe=False to setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -4,93 +4,137 @@
 # and then run "tox" from this directory.
 
 [tox]
-# add additional Python versions here
+# add additional Python versions below
 envlist =
     # always keep coverage-clean first
     coverage-clean
     # code linters/stylers
-    manifest
+    dodgy
     flake8
+    #flake8-bandit
+    manifest
     mypy
+    #mypy-strict
+    pyroma
+    radon
     #vulture
+    #xenon
     # documentation linters/checkers
     doc8
-    rst-lint
     readme
     docs
     # the actual tests
-    py36
     py37
     # always keep coverage-report last
     coverage-report
 
 [testenv]
-commands = coverage run --parallel -m pytest tests {posargs}
-passenv = OCSPDASH_TEST_CONNECTOR OCSPDASH_TEST_CONNECTION TRAVIS CI CI_*
 deps =
     {env:OCSPDASH_TEST_CONNECTOR:}
     coverage
     pytest
-whitelist_externals =
-    /bin/cat
-    /bin/cp
-    /bin/mkdir
+passenv = OCSPDASH_TEST_CONNECTOR OCSPDASH_TEST_CONNECTION TRAVIS CI CI_*
+commands = coverage run --parallel -m pytest tests {posargs}
+description = Run pytest tests with coverage
 
 [testenv:coverage-clean]
 deps = coverage
 skip_install = true
 commands = coverage erase
+description = Erase previously-collected coverage data.
 
-[testenv:manifest]
-deps = check-manifest
-commands = check-manifest
+[testenv:dodgy]
+deps = dodgy
+whitelist_externals = /bin/sh
+skip_install = true
+commands = /bin/sh tests/dodgy-wrapper.sh
+description = Run the dodgy tool to check for "dodgy" code.
 
 [testenv:flake8]
-basepython = python3
-skip_install = true
 deps =
     flake8
+    #flake8-bandit
     flake8-colors
     flake8-docstrings
     flake8-import-order
     pep8-naming
-commands =
-    flake8 src/ocspdash tests/ setup.py
+skip_install = true
+commands = flake8 src/ocspdash tests/ setup.py
+description = Run the flake8 tool with several plugins (docstrings, import order, pep8 naming).
+
+[testenv:flake8-bandit]
+deps =
+    flake8
+    flake8-bandit
+    flake8-colors
+skip_install = true
+commands = flake8 --select=S src/ocspdash tests/ setup.py
+description = Run the flake8 tool with the bandit plugin.
+
+[testenv:manifest]
+deps = check-manifest
+skip_install = true
+commands = check-manifest
+description = Run the check-manifest tool to make sure the contents of the sdist and VCS match.
 
 [testenv:mypy]
-commands = mypy src/ocspdash/ --ignore-missing-import --no-warn-no-return
+deps = mypy
 skip_install = true
+commands = mypy src/ocspdash/ --ignore-missing-import --no-warn-no-return --config-file=/dev/null
+description = Run the mypy tool to check static typing on the project.
+
+[testenv:mypy-strict]
+deps = mypy
+skip_install = true
+commands = mypy src/ocspdash/
+description = Run the mypy tool on the strictest settings.
+
+[testenv:pyroma]
 deps =
-    mypy
+    pygments
+    pyroma
+whitelist_externals = /bin/sh
+skip_install = true
+commands = /bin/sh tests/pyroma-wrapper.sh -d .
+description = Run the pyroma tool to check the project's package friendliness.
+
+[testenv:radon]
+deps = radon
+skip_install = true
+commands = radon mi .
+description = Run the radon tool to calculate the maintainability indices of the project sources.
 
 [testenv:vulture]
-commands = vulture src/ocspdash tests/
+deps = vulture
 skip_install = true
-deps =
-    vulture
+commands = vulture src/ocspdash tests/
+description = Run the vulture tool to look for dead code.
+
+[testenv:xenon]
+deps = xenon
+skip_install = true
+ignore_errors = true
+commands =
+    xenon --max-average A --max-modules A --max-absolute B setup.py
+    xenon --max-average A --max-modules A --max-absolute B src/ocspdash
+    xenon --max-average A --max-modules A --max-absolute B --no-assert tests/
+description = Run the xenon tool to monitor code complexity.
 
 [testenv:doc8]
-basepython = python3
-skip_install = true
 deps =
-    sphinx
     doc8
-commands =
-    doc8 docs/source/ README.rst
-
-[testenv:rst-lint]
-commands = rst-lint README.rst
-skip_install = true
-deps =
-    restructuredtext_lint
     pygments
+skip_install = true
+commands = doc8 docs/source/ README.rst
+description = Run the doc8 tool to check the style of RST files in the project docs and the README.rst file.
 
 [testenv:readme]
 deps =
-    restructuredtext-lint
+    restructuredtext_lint
     pygments
 skip_install = true
 commands = rst-lint README.rst
+description = Check the README.rst file with rst-lint to make sure PyPI will parse it.
 
 [testenv:docs]
 changedir = docs
@@ -98,6 +142,10 @@ deps =
     sphinx
     sphinx-autodoc-typehints
     sphinx_rtd_theme
+whitelist_externals =
+    /bin/cat
+    /bin/cp
+    /bin/mkdir
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
@@ -105,6 +153,7 @@ commands =
     sphinx-build -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
     cat {envtmpdir}/build/coverage/c.txt
     cat {envtmpdir}/build/coverage/python.txt
+description = Attempt to build the Sphinx docs.
 
 [testenv:coverage-report]
 deps = coverage
@@ -112,3 +161,4 @@ skip_install = true
 commands =
     coverage combine
     coverage report
+description = Combine coverage data from all test runs and report on the results.
