--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,15 +5,16 @@ graft tests
 prune docs/build
 prune nginx
 
-include Dockerfile
-include docker-compose.yml
 include .dockerignore
 include .flake8
-include doc8.ini
+include Dockerfile
 include Pipfile
 include Pipfile.lock
-include tox.ini
+include doc8.ini
+include docker-compose.yml
+include mypy.ini
 include requirements.txt
+include tox.ini
 
 include *.rst
 
