--- a/tox.ini
+++ b/tox.ini
@@ -93,9 +93,8 @@ description = Run the mypy tool on the strictest settings.
 deps =
     pygments
     pyroma
-whitelist_externals = /bin/sh
 skip_install = true
-commands = /bin/sh tests/pyroma-wrapper.sh -d .
+commands = pyroma --min=10 .
 description = Run the pyroma tool to check the project's package friendliness.
 
 [testenv:radon]
