--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,42 @@
 -i https://pypi.org/simple
 -e .
-argon2-cffi==18.1.0
+argon2-cffi==19.1.0
 asn1crypto==0.24.0
 censys==0.0.8
-certifi==2018.4.16
+certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
-click==6.7
-cryptography==2.3
-dominate==2.3.1
+click==7.0
+cryptography==2.5
+dominate==2.3.5
 ecdsa==0.13
-enum34==1.1.6
-flasgger==0.9.0
-flask-admin==1.5.1
+flasgger==0.9.2
+flask-admin==1.5.3
 flask-bootstrap==3.3.7.1
 flask-sqlalchemy==2.3.2
 flask==1.0.2
-future==0.16.0
-idna==2.7
-itsdangerous==0.24
+future==0.17.1
+idna==2.8
+itsdangerous==1.1.0
 jinja2==2.10
 jsonlines==1.2.0
 jsonschema==2.6.0
-markupsafe==1.0
-mistune==0.8.3
+markupsafe==1.1.0
+mistune==0.8.4
 netaddr==0.7.19
 ocspbuilder==0.10.2
 oscrypto==0.19.1
 passlib==1.7.1
-pyasn1==0.4.4
-pycparser==2.18
-python-jose==3.0.0
+pyasn1==0.4.5
+pycparser==2.19
+python-jose==3.0.1
 pyyaml==3.13
-requests==2.19.1
-rsa==3.4.2
-six==1.11.0
-sqlalchemy==1.2.10
-tqdm==4.24.0
-urllib3==1.23; python_version != '3.1.*'
+requests==2.21.0
+rsa==4.0
+six==1.12.0
+sqlalchemy==1.2.17
+tqdm==4.30.0
+urllib3==1.24.1
 visitor==0.1.3
 werkzeug==0.14.1
 wtforms==2.2.1
