Prevent use of Radon 3.0.0 by tox.
There is a bug in that release: rubik/radon#166.

--- a/tox.ini
+++ b/tox.ini
@@ -98,7 +98,7 @@ commands = pyroma --min=10 .
 description = Run the pyroma tool to check the project's package friendliness.
 
 [testenv:radon]
-deps = radon
+deps = radon!=3.0.0
 skip_install = true
 commands = radon mi .
 description = Run the radon tool to calculate the maintainability indices of the project sources.
