Temporarily disable flasgger because of pyYAML vulnuerability.

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ asn1crypto = "*"
 censys = "*"
 click = "*"
 cryptography = "*"
-flasgger = "*"
+#flasgger = "*"
 flask = "*"
 flask-admin = "*"
 flask-bootstrap = "*"
