--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ asn1crypto = "*"
 censys = "*"
 click = "*"
 cryptography = "*"
-#flasgger = "*"
+# flasgger = "*"  # flasgger is temporarily disabled due to a security vulnerability
 flask = "*"
 flask-admin = "*"
 flask-bootstrap = "*"
