--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,13 @@
 argon2-cffi==19.1.0
 asn1crypto==0.24.0
 censys==0.0.8
-certifi==2018.11.29
-cffi==1.11.5
+certifi==2019.3.9
+cffi==1.12.2
 chardet==3.0.4
 click==7.0
-cryptography==2.5
+cryptography==2.6.1
 dominate==2.3.5
+easy-config==0.2.0
 ecdsa==0.13
 flask-admin==1.5.3
 flask-bootstrap==3.3.7.1
@@ -17,9 +18,9 @@ flask==1.0.2
 future==0.17.1
 idna==2.8
 itsdangerous==1.1.0
-jinja2==2.10
+jinja2==2.10.1
 jsonlines==1.2.0
-markupsafe==1.1.0
+markupsafe==1.1.1
 netaddr==0.7.19
 ocspbuilder==0.10.2
 oscrypto==0.19.1
@@ -30,9 +31,9 @@ python-jose==3.0.1
 requests==2.21.0
 rsa==4.0
 six==1.12.0
-sqlalchemy==1.2.17
-tqdm==4.30.0
+sqlalchemy==1.3.2
+tqdm==4.31.1
 urllib3==1.24.1
 visitor==0.1.3
-werkzeug==0.14.1
+werkzeug==0.15.2
 wtforms==2.2.1
