Re-enable flasgger now that pyyaml has been fixed.

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ asn1crypto = "*"
 censys = "*"
 click = "*"
 cryptography = "*"
-# flasgger = "*"  # flasgger is temporarily disabled due to a security vulnerability
+flasgger = "*"
 flask = "*"
 flask-admin = "*"
 flask-bootstrap = "*"
