--- a/requirements.txt
+++ b/requirements.txt
@@ -3,37 +3,41 @@
 argon2-cffi==19.1.0
 asn1crypto==0.24.0
 censys==0.0.8
-certifi==2019.3.9
+certifi==2019.9.11
 cffi==1.12.3
 chardet==3.0.4
 click==7.0
-cryptography==2.6.1
-dominate==2.3.5
+cryptography==2.7
+dominate==2.4.0
 easy-config==0.2.0
 ecdsa==0.13.2
+flasgger==0.9.3
 flask-admin==1.5.3
 flask-bootstrap==3.3.7.1
-flask-sqlalchemy==2.3.2
-flask==1.0.2
+flask-sqlalchemy==2.4.1
+flask==1.1.1
 future==0.17.1
 idna==2.8
 itsdangerous==1.1.0
 jinja2==2.10.1
 jsonlines==1.2.0
+jsonschema==2.6.0
 markupsafe==1.1.1
+mistune==0.8.4
 netaddr==0.7.19
 ocspbuilder==0.10.2
 oscrypto==0.19.1
 passlib==1.7.1
-pyasn1==0.4.5
+pyasn1==0.4.7
 pycparser==2.19
 python-jose==3.0.1
-requests==2.21.0
+pyyaml==5.1.2
+requests==2.22.0
 rsa==4.0
 six==1.12.0
-sqlalchemy==1.3.3
-tqdm==4.31.1
-urllib3==1.24.2
+sqlalchemy==1.3.8
+tqdm==4.36.1
+urllib3==1.25.6
 visitor==0.1.3
-werkzeug==0.15.2
+werkzeug==0.16.0
 wtforms==2.2.1
